# Neural-Networks-in-C-

./: CMakeLists.txt  MLP.cpp  MLP.h  Perceptron.cpp  Perceptron.h  README.md  action.yml  intallation.txt  runTests
.github/workflows/: google-test.yml  test.yml
img/: neuralnets
tests/: CMakeLists.txt  MLP.h  Test.cpp  runTests
